<resources>
    <string name="app_name">Tweeter</string>

    <string name="logoutMenuTitle">Logout</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="title_activity_main">Tweeter</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="title_activity_login">Sign in</string>
    <string name="followeeCount">Following: %d</string>
    <string name="followerCount">Followers: %d</string>

    <string name="userName">User Name:</string>
    <string name="password">Password:</string>
    <string name="profilePic">Profile Picture:</string>
    <string name="signinButton">SIGN IN</string>
    <string name="registerButton">REGISTER</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="statusMessage">What\'s on your mind?</string>
    <string name="exitStatus">Exit Status</string>
    <string name="postStatus">Post Status</string>

</resources>
